# UniRoute

./: .gitignore  CLAUDE.md  OPTIMIZATION_FROM_ADK.md  OPTIMIZATION_PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_req.json
src-tauri/.cargo/: config.toml
src-tauri/examples/: test_parse.rs
src-tauri/src/: client_config.rs  error.rs  lib.rs  main.rs  test_parse.rs  test_responses_parse.rs
src-tauri/src/cli_config/: detector.rs  manager.rs  mod.rs  snapshot.rs  traits.rs  types.rs
src-tauri/src/cli_config/adapters/: claude.rs  codex.rs  droid.rs  gsd.rs  mod.rs  pi.rs
src-tauri/src/commands/: cli_config.rs  config.rs  group.rs  mod.rs  oauth.rs  pricing.rs  provider.rs  proxy.rs  quota.rs
src-tauri/src/models/: entities.rs  mod.rs  mod.rs.bak  requests.rs  responses.rs  templates.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/pricing/: mod.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/proxy/: handler.rs  mod.rs
src-tauri/src/proxy/handler/: chat.rs  claude.rs  common.rs  embeddings.rs  mod.rs  responses.rs
src-tauri/src/router/: circuit_breaker.rs  combo.rs  conversion.rs  fallback.rs  mod.rs  rate_limiter.rs  retry.rs  strategies.rs
src-tauri/src/state/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/translator/: claude.rs  converter.rs  mod.rs  openai.rs
src/components/: ProxyContext.tsx  Skeleton.tsx  TagInput.tsx
src/i18n/: index.ts
src/pages/: CliTools.tsx  Dashboard.tsx  Groups.tsx  Logs.tsx  Providers.tsx  (+1 more)
(+2 files in other folders)
