[package]
name = "uniroute"
version = "0.1.0"
description = "UniRoute - 统一 AI 路由器，将多个 AI 提供商统一为一个接口"
authors = ["UniRoute Team"]
edition = "2021"

[lib]
name = "uniroute_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
async-stream = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"
tokio-stream = "0.1"
parking_lot = "0.12"
dirs = "5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
regex = "1.12.3"
toml_edit = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
